# nous

./: .env.example  .gitignore  README.md  h --force  install-ollama.ps1  pyproject.toml  requirements.txt  setup.bat  setup_check.py  spec_extracted.txt
agents/poster/: twitter.py
apps/api/: Dockerfile  __init__.py  main.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/feed/: page.tsx
apps/web/src/app/report/[caseId]/: page.tsx
apps/web/src/components/layout/: site-header.tsx
apps/web/src/components/report/: funding-chain.tsx  holders-table.tsx  score-breakdown.tsx  score-ring.tsx  signal-table.tsx
apps/web/src/components/search/: investigation-form.tsx  recent-investigations.tsx
apps/web/src/lib/: api.ts  constants.ts  types.ts
docs/: schema.sql
infra/: docker-compose.yml
tests/: __init__.py  test_reasoning_core.py
workers/discovery/: tasks.py
workers/fetch/: investigate.py  tasks.py
workers/fetch/adapters/: __init__.py  bags.py  dexscreener.py  github.py  helius.py  infrastructure.py
workers/graph/: tasks.py
workers/reasoning/: tasks.py
workers/reporting/: tasks.py
workers/signals/: tasks.py
